Added dependencies and setup dataframes

--- a/Group3_Project1.ipynb
+++ b/Group3_Project1.ipynb
@@ -2,15 +2,243 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ARREST_KEY</th>\n",
+       "      <th>ARREST_DATE</th>\n",
+       "      <th>PD_CD</th>\n",
+       "      <th>PD_DESC</th>\n",
+       "      <th>KY_CD</th>\n",
+       "      <th>OFNS_DESC</th>\n",
+       "      <th>LAW_CODE</th>\n",
+       "      <th>LAW_CAT_CD</th>\n",
+       "      <th>ARREST_BORO</th>\n",
+       "      <th>ARREST_PRECINCT</th>\n",
+       "      <th>JURISDICTION_CODE</th>\n",
+       "      <th>AGE_GROUP</th>\n",
+       "      <th>PERP_SEX</th>\n",
+       "      <th>PERP_RACE</th>\n",
+       "      <th>X_COORD_CD</th>\n",
+       "      <th>Y_COORD_CD</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>261209118</td>\n",
+       "      <td>01/01/2023</td>\n",
+       "      <td>109</td>\n",
+       "      <td>ASSAULT 2,1,UNCLASSIFIED</td>\n",
+       "      <td>106.0</td>\n",
+       "      <td>FELONY ASSAULT</td>\n",
+       "      <td>PL 1200501</td>\n",
+       "      <td>F</td>\n",
+       "      <td>K</td>\n",
+       "      <td>77</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45-64</td>\n",
+       "      <td>F</td>\n",
+       "      <td>BLACK</td>\n",
+       "      <td>999335</td>\n",
+       "      <td>186085</td>\n",
+       "      <td>40.677426</td>\n",
+       "      <td>-73.945615</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>262984267</td>\n",
+       "      <td>02/03/2023</td>\n",
+       "      <td>515</td>\n",
+       "      <td>CONTROLLED SUBSTANCE,SALE 3</td>\n",
+       "      <td>117.0</td>\n",
+       "      <td>DANGEROUS DRUGS</td>\n",
+       "      <td>PL 2203901</td>\n",
+       "      <td>F</td>\n",
+       "      <td>K</td>\n",
+       "      <td>73</td>\n",
+       "      <td>0</td>\n",
+       "      <td>25-44</td>\n",
+       "      <td>M</td>\n",
+       "      <td>BLACK</td>\n",
+       "      <td>1009318</td>\n",
+       "      <td>178259</td>\n",
+       "      <td>40.655923</td>\n",
+       "      <td>-73.909650</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>263664549</td>\n",
+       "      <td>02/15/2023</td>\n",
+       "      <td>105</td>\n",
+       "      <td>STRANGULATION 1ST</td>\n",
+       "      <td>106.0</td>\n",
+       "      <td>FELONY ASSAULT</td>\n",
+       "      <td>PL 1211200</td>\n",
+       "      <td>F</td>\n",
+       "      <td>K</td>\n",
+       "      <td>62</td>\n",
+       "      <td>0</td>\n",
+       "      <td>25-44</td>\n",
+       "      <td>M</td>\n",
+       "      <td>WHITE</td>\n",
+       "      <td>982272</td>\n",
+       "      <td>158771</td>\n",
+       "      <td>40.602468</td>\n",
+       "      <td>-74.007120</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>261345231</td>\n",
+       "      <td>01/04/2023</td>\n",
+       "      <td>105</td>\n",
+       "      <td>STRANGULATION 1ST</td>\n",
+       "      <td>106.0</td>\n",
+       "      <td>FELONY ASSAULT</td>\n",
+       "      <td>PL 1211200</td>\n",
+       "      <td>F</td>\n",
+       "      <td>M</td>\n",
+       "      <td>32</td>\n",
+       "      <td>0</td>\n",
+       "      <td>25-44</td>\n",
+       "      <td>M</td>\n",
+       "      <td>BLACK</td>\n",
+       "      <td>999899</td>\n",
+       "      <td>238684</td>\n",
+       "      <td>40.821797</td>\n",
+       "      <td>-73.943457</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>263536618</td>\n",
+       "      <td>02/13/2023</td>\n",
+       "      <td>109</td>\n",
+       "      <td>ASSAULT 2,1,UNCLASSIFIED</td>\n",
+       "      <td>106.0</td>\n",
+       "      <td>FELONY ASSAULT</td>\n",
+       "      <td>PL 12005WX</td>\n",
+       "      <td>F</td>\n",
+       "      <td>K</td>\n",
+       "      <td>71</td>\n",
+       "      <td>0</td>\n",
+       "      <td>25-44</td>\n",
+       "      <td>M</td>\n",
+       "      <td>BLACK</td>\n",
+       "      <td>1001437</td>\n",
+       "      <td>183080</td>\n",
+       "      <td>40.669175</td>\n",
+       "      <td>-73.938042</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ARREST_KEY ARREST_DATE  PD_CD                      PD_DESC  KY_CD  \\\n",
+       "0   261209118  01/01/2023    109     ASSAULT 2,1,UNCLASSIFIED  106.0   \n",
+       "1   262984267  02/03/2023    515  CONTROLLED SUBSTANCE,SALE 3  117.0   \n",
+       "2   263664549  02/15/2023    105            STRANGULATION 1ST  106.0   \n",
+       "3   261345231  01/04/2023    105            STRANGULATION 1ST  106.0   \n",
+       "4   263536618  02/13/2023    109     ASSAULT 2,1,UNCLASSIFIED  106.0   \n",
+       "\n",
+       "         OFNS_DESC    LAW_CODE LAW_CAT_CD ARREST_BORO  ARREST_PRECINCT  \\\n",
+       "0   FELONY ASSAULT  PL 1200501          F           K               77   \n",
+       "1  DANGEROUS DRUGS  PL 2203901          F           K               73   \n",
+       "2   FELONY ASSAULT  PL 1211200          F           K               62   \n",
+       "3   FELONY ASSAULT  PL 1211200          F           M               32   \n",
+       "4   FELONY ASSAULT  PL 12005WX          F           K               71   \n",
+       "\n",
+       "   JURISDICTION_CODE AGE_GROUP PERP_SEX PERP_RACE  X_COORD_CD  Y_COORD_CD  \\\n",
+       "0                  0     45-64        F     BLACK      999335      186085   \n",
+       "1                  0     25-44        M     BLACK     1009318      178259   \n",
+       "2                  0     25-44        M     WHITE      982272      158771   \n",
+       "3                  0     25-44        M     BLACK      999899      238684   \n",
+       "4                  0     25-44        M     BLACK     1001437      183080   \n",
+       "\n",
+       "    Latitude  Longitude  \n",
+       "0  40.677426 -73.945615  \n",
+       "1  40.655923 -73.909650  \n",
+       "2  40.602468 -74.007120  \n",
+       "3  40.821797 -73.943457  \n",
+       "4  40.669175 -73.938042  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#-------------------------------\n",
+    "# Dependencies and Setup\n",
+    "#-------------------------------\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "import scipy.stats as st\n",
+    "\n",
+    "\n",
+    "\n",
+    "#-------------------------------\n",
+    "# Dependencies and Setup\n",
+    "#-------------------------------\n",
+    "\n",
+    "arrest_data = \"Resources/NYPD_Arrest_Data_2023.csv\"\n",
+    "borough_zip_data = \"Resources/nyc_zip_borough_neighborhoods.csv\"\n",
+    "mental_fac_data = \"Resources/NYS-Mental-Facilities.csv\"\n",
+    "\n",
+    "\n",
+    "#-------------------------------\n",
+    "# Create Dataframes\n",
+    "#-------------------------------\n",
+    "\n",
+    "arrest_df = pd.read_csv(arrest_data)\n",
+    "zip_df = pd.read_csv(borough_zip_data)\n",
+    "menta_fac_df = pd.read_csv(mental_fac_data)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
