Cleaned all databases

--- a/Group3_Project1.ipynb
+++ b/Group3_Project1.ipynb
@@ -31,11 +31,7 @@
     "\n",
     "arrest_df = pd.read_csv(arrest_data)\n",
     "zip_df = pd.read_csv(borough_zip_data)\n",
-    "menta_fac_df = pd.read_csv(mental_fac_data)\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "menta_fac_df = pd.read_csv(mental_fac_data)\n"
    ]
   },
   {
@@ -64,6 +60,10 @@
     }
    ],
    "source": [
+    "#-------------------------------\n",
+    "# List column names for mental facility dataframe\n",
+    "#-------------------------------\n",
+    "\n",
     "menta_fac_df.columns"
    ]
   },
@@ -337,9 +337,8 @@
    ],
    "source": [
     "#-------------------------------\n",
-    "# Clean up mental health facility dataframe\n",
+    "# Remove unnecessary columns and save as a new dataframe\n",
     "#-------------------------------\n",
-    "\n",
     "\n",
     "reduced_mf_df = menta_fac_df[[\"index\", 'Row Created Date Time', ' Sponsor Name',\n",
     "       ' Agency Name', 'Facility Name', ' Facility Code',\n",
@@ -352,9 +351,24 @@
     "       ' Program Subcategory Description', 'Location']]\n",
     "\n",
     "\n",
+    "\n",
+    "#-------------------------------\n",
+    "# Remove duplicates and save as new dataframe\n",
+    "#-------------------------------\n",
+    "\n",
     "clean_mf_df= reduced_mf_df.drop_duplicates(subset=[' Facility Code'], keep='first')\n",
     "\n",
+    "\n",
+    "#-------------------------------\n",
+    "# Remove rows where ' Program Zip' is empty and save as new dataframe\n",
+    "#-------------------------------\n",
+    "\n",
     "super_clean_mf_df=clean_mf_df.dropna(subset = [' Program Zip'])\n",
+    "\n",
+    "\n",
+    "#-------------------------------\n",
+    "# Show first five rows of dataframe\n",
+    "#-------------------------------\n",
     "\n",
     "super_clean_mf_df.head()\n",
     "\n"
@@ -382,7 +396,7 @@
    ],
    "source": [
     "#-------------------------------\n",
-    "# Read Arrest_df columns\n",
+    "# List column names for arrests dataframe\n",
     "#-------------------------------\n",
     "\n",
     "arrest_df.columns\n",
@@ -514,16 +528,30 @@
    ],
    "source": [
     "#-------------------------------\n",
-    "# Create new dataframe without \n",
+    "# Remove unnecessary columns and save as a new database\n",
     "#-------------------------------\n",
     "\n",
     "reduced_arrest_df = arrest_df[['ARREST_KEY', 'ARREST_BORO', 'AGE_GROUP', 'PERP_SEX', 'PERP_RACE', 'X_COORD_CD',\n",
     "       'Y_COORD_CD', 'Latitude', 'Longitude']]\n",
     "\n",
     "\n",
+    "#-------------------------------\n",
+    "# Remove duplicates and save as new dataframe\n",
+    "#-------------------------------\n",
+    "\n",
     "clean_arrest_df= reduced_arrest_df.drop_duplicates(subset=['ARREST_KEY'], keep='first')\n",
     "\n",
+    "\n",
+    "#-------------------------------\n",
+    "# Remove rows where ' Program Zip' is empty and save as new dataframe\n",
+    "#-------------------------------\n",
+    "\n",
     "super_clean_arrest_df=clean_arrest_df.dropna(subset = ['ARREST_BORO'])\n",
+    "\n",
+    "\n",
+    "#-------------------------------\n",
+    "# Show first five rows of dataframe\n",
+    "#-------------------------------\n",
     "\n",
     "super_clean_arrest_df.head()"
    ]
@@ -545,6 +573,10 @@
     }
    ],
    "source": [
+    "#-------------------------------\n",
+    "# List column names for zipcode dataframe\n",
+    "#-------------------------------\n",
+    "\n",
     "zip_df.columns"
    ]
   },
@@ -623,12 +655,30 @@
     }
    ],
    "source": [
+    "#-------------------------------\n",
+    "# Remove unnecessary columns and save as a new database\n",
+    "#-------------------------------\n",
+    "\n",
     "reduced_zip_df = zip_df[['zip', 'borough']]\n",
     "\n",
     "\n",
+    "#-------------------------------\n",
+    "# Remove duplicates and save as new dataframe\n",
+    "#-------------------------------\n",
+    "\n",
     "clean_zip_df= reduced_zip_df.drop_duplicates(subset=['zip'], keep='first')\n",
     "\n",
+    "\n",
+    "#-------------------------------\n",
+    "# Remove rows where ' Program Zip' is empty and save as new dataframe\n",
+    "#-------------------------------\n",
+    "\n",
     "super_clean_zip_df=clean_zip_df.dropna(subset = ['borough'])\n",
+    "\n",
+    "\n",
+    "#-------------------------------\n",
+    "# Show first five rows of dataframe\n",
+    "#-------------------------------\n",
     "\n",
     "super_clean_zip_df.head()"
    ]
