--- a/Group3_Project1.ipynb
+++ b/Group3_Project1.ipynb
@@ -337,6 +337,8 @@
    ],
    "source": [
     "#-------------------------------\n",
+    "# MENTAL FACILITY DATAFRAME\n",
+    "# \n",
     "# Remove unnecessary columns and save as a new dataframe\n",
     "#-------------------------------\n",
     "\n",
@@ -528,6 +530,8 @@
    ],
    "source": [
     "#-------------------------------\n",
+    "# ARREST DATAFRAME\n",
+    " \n",
     "# Remove unnecessary columns and save as a new database\n",
     "#-------------------------------\n",
     "\n",
@@ -656,6 +660,7 @@
    ],
    "source": [
     "#-------------------------------\n",
+    "# ZIPCOD DATAFRAME\n",
     "# Remove unnecessary columns and save as a new database\n",
     "#-------------------------------\n",
     "\n",
