--- a/Group3_Project1.ipynb
+++ b/Group3_Project1.ipynb
@@ -36,6 +36,102 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>zip</th>\n",
+       "      <th>borough</th>\n",
+       "      <th>neighborhood</th>\n",
+       "      <th>population</th>\n",
+       "      <th>density</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10001</td>\n",
+       "      <td>Manhattan</td>\n",
+       "      <td>Chelsea and Clinton</td>\n",
+       "      <td>21102</td>\n",
+       "      <td>33959</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10002</td>\n",
+       "      <td>Manhattan</td>\n",
+       "      <td>Lower East Side</td>\n",
+       "      <td>81410</td>\n",
+       "      <td>92573</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10003</td>\n",
+       "      <td>Manhattan</td>\n",
+       "      <td>Lower East Side</td>\n",
+       "      <td>56024</td>\n",
+       "      <td>97188</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10004</td>\n",
+       "      <td>Manhattan</td>\n",
+       "      <td>Lower Manhattan</td>\n",
+       "      <td>3089</td>\n",
+       "      <td>5519</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10005</td>\n",
+       "      <td>Manhattan</td>\n",
+       "      <td>Lower Manhattan</td>\n",
+       "      <td>7135</td>\n",
+       "      <td>97048</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     zip    borough         neighborhood  population  density\n",
+       "0  10001  Manhattan  Chelsea and Clinton       21102    33959\n",
+       "1  10002  Manhattan      Lower East Side       81410    92573\n",
+       "2  10003  Manhattan      Lower East Side       56024    97188\n",
+       "3  10004  Manhattan      Lower Manhattan        3089     5519\n",
+       "4  10005  Manhattan      Lower Manhattan        7135    97048"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "zip_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [
@@ -337,8 +433,6 @@
    ],
    "source": [
     "#-------------------------------\n",
-    "# MENTAL FACILITY DATAFRAME\n",
-    "# \n",
     "# Remove unnecessary columns and save as a new dataframe\n",
     "#-------------------------------\n",
     "\n",
