SAving main file

--- a/Group3_Project1.ipynb
+++ b/Group3_Project1.ipynb
@@ -36,102 +36,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>zip</th>\n",
-       "      <th>borough</th>\n",
-       "      <th>neighborhood</th>\n",
-       "      <th>population</th>\n",
-       "      <th>density</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>10001</td>\n",
-       "      <td>Manhattan</td>\n",
-       "      <td>Chelsea and Clinton</td>\n",
-       "      <td>21102</td>\n",
-       "      <td>33959</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>10002</td>\n",
-       "      <td>Manhattan</td>\n",
-       "      <td>Lower East Side</td>\n",
-       "      <td>81410</td>\n",
-       "      <td>92573</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>10003</td>\n",
-       "      <td>Manhattan</td>\n",
-       "      <td>Lower East Side</td>\n",
-       "      <td>56024</td>\n",
-       "      <td>97188</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>10004</td>\n",
-       "      <td>Manhattan</td>\n",
-       "      <td>Lower Manhattan</td>\n",
-       "      <td>3089</td>\n",
-       "      <td>5519</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>10005</td>\n",
-       "      <td>Manhattan</td>\n",
-       "      <td>Lower Manhattan</td>\n",
-       "      <td>7135</td>\n",
-       "      <td>97048</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     zip    borough         neighborhood  population  density\n",
-       "0  10001  Manhattan  Chelsea and Clinton       21102    33959\n",
-       "1  10002  Manhattan      Lower East Side       81410    92573\n",
-       "2  10003  Manhattan      Lower East Side       56024    97188\n",
-       "3  10004  Manhattan      Lower Manhattan        3089     5519\n",
-       "4  10005  Manhattan      Lower Manhattan        7135    97048"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "zip_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [
@@ -501,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +521,7 @@
        "4      183080  40.669175 -73.938042  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -650,7 +554,7 @@
     "#-------------------------------\n",
     "# Show first five rows of dataframe\n",
     "#-------------------------------\n",
-    "\n",
+    "super_clean_arrest_df.to_csv(\"Resources/NYC_Bor_Arrest.csv\", index=False, header=True, mode='a')\n",
     "super_clean_arrest_df.head()"
    ]
   },
@@ -780,6 +684,312 @@
     "#-------------------------------\n",
     "\n",
     "super_clean_zip_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>Row Created Date Time</th>\n",
+       "      <th>Sponsor Name</th>\n",
+       "      <th>Agency Name</th>\n",
+       "      <th>Facility Name</th>\n",
+       "      <th>Facility Code</th>\n",
+       "      <th>Program Name</th>\n",
+       "      <th>Populations Served</th>\n",
+       "      <th>Agency Phone</th>\n",
+       "      <th>Program Phone</th>\n",
+       "      <th>Program Address 1</th>\n",
+       "      <th>Program Address 2</th>\n",
+       "      <th>Program City</th>\n",
+       "      <th>Program State</th>\n",
+       "      <th>zip</th>\n",
+       "      <th>Operating Certificate Required?</th>\n",
+       "      <th>Program Tier</th>\n",
+       "      <th>Operating Certificate Duration</th>\n",
+       "      <th>Program County</th>\n",
+       "      <th>Program Region</th>\n",
+       "      <th>Program Type Description</th>\n",
+       "      <th>Program Category Description</th>\n",
+       "      <th>Program Subcategory Description</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>borough</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>526</td>\n",
+       "      <td>12/19/2017 02:08:00 PM</td>\n",
+       "      <td>Brookdale Hospital Medical Center</td>\n",
+       "      <td>Brookdale Hospital Medical Center</td>\n",
+       "      <td>Brookdale Hospital Medical Center</td>\n",
+       "      <td>6571</td>\n",
+       "      <td>Brookdale Hospital CMHC Child Clinic</td>\n",
+       "      <td>Children Adolescents</td>\n",
+       "      <td>(718)240-6330</td>\n",
+       "      <td>(718)240-6330</td>\n",
+       "      <td>Linden Boulevard &amp; Brookdale Plaza</td>\n",
+       "      <td>12th Floor</td>\n",
+       "      <td>Brooklyn</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>11212</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>Kings</td>\n",
+       "      <td>New York City</td>\n",
+       "      <td>Clinic Treatment</td>\n",
+       "      <td>Outpatient</td>\n",
+       "      <td>Clinic Treatment</td>\n",
+       "      <td>Linden Boulevard\\r\\nBrooklyn, NY 11212\\r\\n</td>\n",
+       "      <td>Brooklyn</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>884</td>\n",
+       "      <td>12/19/2017 02:08:00 PM</td>\n",
+       "      <td>Mount Sinai Hospitals Group Inc.</td>\n",
+       "      <td>Beth Israel Medical Center</td>\n",
+       "      <td>Beth Israel Medical Center</td>\n",
+       "      <td>6585</td>\n",
+       "      <td>Beth Israel Medical Center CPEP</td>\n",
+       "      <td>Adolescents Adults</td>\n",
+       "      <td>(212)420-5628</td>\n",
+       "      <td>(212)420-4614</td>\n",
+       "      <td>First Avenue At 16th Street</td>\n",
+       "      <td>Silver Pavilion First Floor</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>10003</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>New York City</td>\n",
+       "      <td>CPEP Crisis Intervention</td>\n",
+       "      <td>Emergency</td>\n",
+       "      <td>Comprehensive Psychiatric Emergency Program</td>\n",
+       "      <td>First Avenue\\r\\nNew York, NY 10003\\r\\n</td>\n",
+       "      <td>Manhattan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>960</td>\n",
+       "      <td>12/19/2017 02:08:00 PM</td>\n",
+       "      <td>Mount Sinai Hospitals Group Inc.</td>\n",
+       "      <td>Mount Sinai Medical Center</td>\n",
+       "      <td>Mount Sinai Medical Center</td>\n",
+       "      <td>6399</td>\n",
+       "      <td>Child and Family Outpatient Clinic</td>\n",
+       "      <td>Children Adolescents Adults</td>\n",
+       "      <td>(212)241-6500</td>\n",
+       "      <td>(212)241-3660</td>\n",
+       "      <td>1240 Park Avenue</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>10128</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>New York City</td>\n",
+       "      <td>Clinic Treatment</td>\n",
+       "      <td>Outpatient</td>\n",
+       "      <td>Clinic Treatment</td>\n",
+       "      <td>1240 Park Avenue\\r\\nNew York, NY 10128\\r\\n</td>\n",
+       "      <td>Manhattan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>961</td>\n",
+       "      <td>12/19/2017 02:08:00 PM</td>\n",
+       "      <td>NYC Department of Health and Mental Hygiene</td>\n",
+       "      <td>NYC Department of Health and Mental Hygiene</td>\n",
+       "      <td>NYC Department of Health and Mental Hygiene</td>\n",
+       "      <td>7562</td>\n",
+       "      <td>Advocacy/Support Services</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>(212)219-5557</td>\n",
+       "      <td>(347)396-6287</td>\n",
+       "      <td>42-09 28th Street Cn#48</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Long Island City</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>11101</td>\n",
+       "      <td>N</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>New York City</td>\n",
+       "      <td>Advocacy/Support Services</td>\n",
+       "      <td>Support</td>\n",
+       "      <td>Self-Help</td>\n",
+       "      <td>42 09 28th Street\\r\\nLong Island City, NY 1110...</td>\n",
+       "      <td>Queens</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>963</td>\n",
+       "      <td>12/19/2017 02:08:00 PM</td>\n",
+       "      <td>New York City Health and Hospitals Corporation...</td>\n",
+       "      <td>NYC-HHC Bellevue Hospital Center</td>\n",
+       "      <td>NYC-HHC Bellevue Hospital Center</td>\n",
+       "      <td>6566</td>\n",
+       "      <td>HHC Bellevue Hospital Center - HH CM</td>\n",
+       "      <td>Adults</td>\n",
+       "      <td>(212)562-3697</td>\n",
+       "      <td>(212)562-4273</td>\n",
+       "      <td>27th St &amp; First Avenue</td>\n",
+       "      <td>Old Administration Bldg - 4th Fl</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>10016</td>\n",
+       "      <td>N</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>New York City</td>\n",
+       "      <td>Health Home Care Management</td>\n",
+       "      <td>Support</td>\n",
+       "      <td>Care Coordination</td>\n",
+       "      <td>27th St\\r\\nNew York, NY 10016\\r\\n</td>\n",
+       "      <td>Manhattan</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    index   Row Created Date Time  \\\n",
+       "19    526  12/19/2017 02:08:00 PM   \n",
+       "26    884  12/19/2017 02:08:00 PM   \n",
+       "27    960  12/19/2017 02:08:00 PM   \n",
+       "28    961  12/19/2017 02:08:00 PM   \n",
+       "29    963  12/19/2017 02:08:00 PM   \n",
+       "\n",
+       "                                         Sponsor Name  \\\n",
+       "19                  Brookdale Hospital Medical Center   \n",
+       "26                   Mount Sinai Hospitals Group Inc.   \n",
+       "27                   Mount Sinai Hospitals Group Inc.   \n",
+       "28        NYC Department of Health and Mental Hygiene   \n",
+       "29  New York City Health and Hospitals Corporation...   \n",
+       "\n",
+       "                                    Agency Name  \\\n",
+       "19            Brookdale Hospital Medical Center   \n",
+       "26                   Beth Israel Medical Center   \n",
+       "27                   Mount Sinai Medical Center   \n",
+       "28  NYC Department of Health and Mental Hygiene   \n",
+       "29             NYC-HHC Bellevue Hospital Center   \n",
+       "\n",
+       "                                  Facility Name   Facility Code  \\\n",
+       "19            Brookdale Hospital Medical Center            6571   \n",
+       "26                   Beth Israel Medical Center            6585   \n",
+       "27                   Mount Sinai Medical Center            6399   \n",
+       "28  NYC Department of Health and Mental Hygiene            7562   \n",
+       "29             NYC-HHC Bellevue Hospital Center            6566   \n",
+       "\n",
+       "                            Program Name           Populations Served  \\\n",
+       "19  Brookdale Hospital CMHC Child Clinic         Children Adolescents   \n",
+       "26       Beth Israel Medical Center CPEP           Adolescents Adults   \n",
+       "27    Child and Family Outpatient Clinic  Children Adolescents Adults   \n",
+       "28             Advocacy/Support Services                          NaN   \n",
+       "29  HHC Bellevue Hospital Center - HH CM                       Adults   \n",
+       "\n",
+       "     Agency Phone  Program Phone                   Program Address 1  \\\n",
+       "19  (718)240-6330  (718)240-6330  Linden Boulevard & Brookdale Plaza   \n",
+       "26  (212)420-5628  (212)420-4614         First Avenue At 16th Street   \n",
+       "27  (212)241-6500  (212)241-3660                    1240 Park Avenue   \n",
+       "28  (212)219-5557  (347)396-6287             42-09 28th Street Cn#48   \n",
+       "29  (212)562-3697  (212)562-4273              27th St & First Avenue   \n",
+       "\n",
+       "                   Program Address 2      Program City  Program State    zip  \\\n",
+       "19                        12th Floor          Brooklyn             NY  11212   \n",
+       "26       Silver Pavilion First Floor          New York             NY  10003   \n",
+       "27                               NaN          New York             NY  10128   \n",
+       "28                               NaN  Long Island City             NY  11101   \n",
+       "29  Old Administration Bldg - 4th Fl          New York             NY  10016   \n",
+       "\n",
+       "    Operating Certificate Required?   Program Tier  \\\n",
+       "19                                Y            NaN   \n",
+       "26                                Y            NaN   \n",
+       "27                                Y            NaN   \n",
+       "28                                N            NaN   \n",
+       "29                                N            NaN   \n",
+       "\n",
+       "     Operating Certificate Duration  Program County  Program Region  \\\n",
+       "19                             36.0           Kings   New York City   \n",
+       "26                             36.0        New York   New York City   \n",
+       "27                             36.0        New York   New York City   \n",
+       "28                              NaN        New York   New York City   \n",
+       "29                              NaN        New York   New York City   \n",
+       "\n",
+       "       Program Type Description  Program Category Description  \\\n",
+       "19             Clinic Treatment                    Outpatient   \n",
+       "26     CPEP Crisis Intervention                     Emergency   \n",
+       "27             Clinic Treatment                    Outpatient   \n",
+       "28    Advocacy/Support Services                       Support   \n",
+       "29  Health Home Care Management                       Support   \n",
+       "\n",
+       "                Program Subcategory Description  \\\n",
+       "19                             Clinic Treatment   \n",
+       "26  Comprehensive Psychiatric Emergency Program   \n",
+       "27                             Clinic Treatment   \n",
+       "28                                    Self-Help   \n",
+       "29                            Care Coordination   \n",
+       "\n",
+       "                                             Location    borough  \n",
+       "19         Linden Boulevard\\r\\nBrooklyn, NY 11212\\r\\n   Brooklyn  \n",
+       "26             First Avenue\\r\\nNew York, NY 10003\\r\\n  Manhattan  \n",
+       "27         1240 Park Avenue\\r\\nNew York, NY 10128\\r\\n  Manhattan  \n",
+       "28  42 09 28th Street\\r\\nLong Island City, NY 1110...     Queens  \n",
+       "29                  27th St\\r\\nNew York, NY 10016\\r\\n  Manhattan  "
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "renamed_mf_df = super_clean_mf_df.rename(columns={' Program Zip': \"zip\"})\n",
+    "\n",
+    "renamed_mf_df['zip']=renamed_mf_df['zip'].astype(str)\n",
+    "\n",
+    "super_clean_zip_df['zip']=super_clean_zip_df['zip'].astype(str)\n",
+    "\n",
+    "merged_mf_df = renamed_mf_df.merge(super_clean_zip_df, how=\"left\", on='zip')\n",
+    "\n",
+    "pd.set_option(\"display.max_columns\", None)\n",
+    "\n",
+    "super_clean_merge_df=merged_mf_df.dropna(subset = ['borough'])\n",
+    "\n",
+    "super_clean_merge_df.to_csv(\"Resources/Ment_Fac_Bor.csv\", index=False, header=True, mode='a')\n",
+    "super_clean_merge_df.head()"
    ]
   }
  ],
